# test-python-package

./: pyproject.toml
test_python_package/: __init__.py
tests/: test_test_python_package.py
