[tool.poetry]
name = "test-python-package"
version = "0.1.0"
description = "A greeting package"
authors = ["Francesco Bez <francesco.bez@gmail.com>"]
homepage = "https://github.com/FBEZ-docs-and-templates/test-python-package"
repository = "https://github.com/FBEZ-docs-and-templates/test-python-package"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
